feat(quiz-session): add the quiz session by uuid endpoint
- update openapi doc
- fix quiz answer count
- update mapping type returned by sqlc

Closes #119
